# ml_cpp

./: CMakeLists.txt  README.md
include/: coheir.h  data.h  data_handler.h
kmeans/: CMakeLists.txt
kmeans/include/: kmeans.h
kmeans/src/: kmeans.cpp  main.cpp
knn/: CMakeLists.txt
knn/src/: knn.cpp  main.cpp
linear_regression/include/: DataHandler.hpp  linear_regression.hpp
linear_regression/src/: DataHandler.cpp  linear_regression.cpp  main.cpp
src/: coheir.cpp  data.cpp  data_handler.cpp
